# couplet_gen

./: Cargo.toml  README.md
src/: gpt_client.rs  image_gen.rs  lib.rs  main.rs
