[package]
name = "couplet_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
chrono = "0.4.39"
iced = { version = "0.13.1",features = ["default","image"] }
image = "0.25.5"
imageproc = "0.25.0"
serde_json = "1.0.137"
ureq = { version = "2.12.1", features = ["json"] }

[profile.release]
# 设置为 'windows'，将 GUI 应用标记为没有控制台窗口
windows-subsystem = "windows"
